--- a/src/App.scss
+++ b/src/App.scss
@@ -100,6 +100,7 @@
 }
 .mainpage {
   width: 100%;
+  max-width: 768px;
   .search {
     @include flex-layout(row, center);
     overflow: visible;
